--- a/5.移动端开发/project/css/index.css
+++ b/5.移动端开发/project/css/index.css
@@ -13,3 +13,139 @@
   width: 6.25rem;
   text-align: center;
 }
+.add {
+  height: 1.40625rem;
+  line-height: 1.40625rem;
+  font-size: 0.46875rem;
+  border: 1px solid #e5e5e5;
+  border-top: none;
+}
+.add .add-icon {
+  margin-left: 0.46875rem;
+  width: 0.46875rem;
+  color: #8e8e8e;
+}
+.add .add-add {
+  display: inline-block;
+  width: 6.25rem;
+  color: #8e8e8e;
+}
+.add .add-right {
+  color: red;
+  text-align: center;
+}
+.secret {
+  height: 1.40625rem;
+  line-height: 1.40625rem;
+  font-size: 0.5625rem;
+  border: 1px solid #e5e5e5;
+  border-top: none;
+}
+.secret .secret-icon {
+  width: 0.9375rem;
+  margin-left: 0.3125rem;
+  text-align: center;
+  color: red;
+}
+.secret .secret-JD {
+  display: inline-block;
+  width: 0.78125rem;
+  color: #8e8e8e;
+}
+.secret .secret-title {
+  display: inline-block;
+  width: 3.125rem;
+  font-weight: bold;
+}
+.free {
+  height: 1.40625rem;
+  line-height: 1.40625rem;
+  font-size: 0.4375rem;
+  color: #8e8e8e;
+  border: 1px solid #e5e5e5;
+  border-top: none;
+}
+.free .free-title {
+  margin-left: 0.3125rem;
+}
+.nev {
+  height: 4.375rem;
+  border: 1px solid #e5e5e5;
+  border-top: none;
+}
+.nev .nev-top {
+  height: 3.125rem;
+  font-size: 0.5625rem;
+  margin: 0.09375rem;
+  box-sizing: border-box;
+  position: relative;
+}
+.nev .nev-top .nev-icon {
+  position: absolute;
+  top: 0;
+  width: 1.25rem;
+  text-align: center;
+  line-height: 3.75rem;
+}
+.nev .nev-top .nev-img {
+  position: absolute;
+  left: 1.25rem;
+  top: 0.15625rem;
+  width: 2.5rem;
+  height: 2.8125rem;
+  padding-top: 0.15625rem;
+}
+.nev .nev-top .nev-box {
+  position: absolute;
+  left: 3.75rem;
+  width: 5rem;
+  height: 3.75rem;
+  margin-left: 0.3125rem;
+  box-sizing: border-box;
+}
+.nev .nev-top .nev-box .nev-title {
+  display: inline-block;
+  width: 100%;
+  height: 1.5625rem;
+  font-size: 0.46875rem;
+  margin-top: 0.3125rem;
+}
+.nev .nev-top .nev-box .nev-kg {
+  font-size: 0.46875rem;
+  width: 100%;
+  height: 0.46875rem;
+  color: #8e8e8e;
+}
+.nev .nev-top .nev-box .nev-price {
+  width: 50%;
+  font-size: 0.46875rem;
+  height: 1.09375rem;
+  line-height: 1.09375rem;
+  display: inline-block;
+}
+.nev .nev-top .nev-box .nec-one {
+  background: #f5f5f5;
+  color: #888888;
+  display: inline-block;
+  font-size: 0.78125rem;
+  width: 0.625rem;
+  height: 0.78125rem;
+  line-height: 0.78125rem;
+  text-align: center;
+}
+.nev .nev-bottom {
+  height: 1.5625rem;
+  font-size: 0.46875rem;
+  float: right;
+  padding-right: 0.625rem;
+  color: #929292;
+}
+.footer {
+  width: 100%;
+  height: 1.875rem;
+  background: red;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: 888;
+}
