--- a/9..blog/views/admin/layout.html
+++ b/9..blog/views/admin/layout.html
@@ -44,7 +44,7 @@
                   <li><a href="#">Another action</a></li>
                   <li><a href="#">Something else here</a></li>
                   <li role="separator" class="divider"></li>
-                  <li><a href="#">退出登陆</a></li>
+                  <li><a href="javascript:;" id="logout">退出登陆</a></li>
                 </ul>
               </div>
           </li>
@@ -78,6 +78,7 @@
     <script src="/js/jquery.min.js"></script>
 
     <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/admin.js"></script>
 
 
 
