--- a/9..blog/views/admin/layout.html
+++ b/9..blog/views/admin/layout.html
@@ -58,7 +58,8 @@
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
             <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
-           <li ><a href="#">用户列表 <span class="sr-only">(current)</span></a></li>
+           <li ><a href="/admin/users">用户列表</a></li>
+           <li ><a href="/category">分类管理</a></li>
 
           </ul>
          
