--- a/9..blog/views/main/layout.html
+++ b/9..blog/views/main/layout.html
@@ -58,7 +58,7 @@
             {% if userInfo.isAdmin %}
             <a href="./admin">后台管理</a>
             {% else %}
-            <a href="./use">用户后台</a>
+            <a href="#">用户后台</a>
             {% endif %}
             <a class="link" href="javascript:;" id='logout'>退出</a>
           </div>  
