--- a/9..blog/views/admin/category_list.html
+++ b/9..blog/views/admin/category_list.html
@@ -8,11 +8,27 @@
 <a href="/category/add" class="btn btn-primary">新增分类</a>
 <table class="table table-striped">
   <tr>
-    <th>编号</th>
-    <th>姓名</th>
-    <td>管理员</td>
-  </tr>
+    <th>id</th>
+    <th>名称</th>
 
+    <th>序号</th>
+    <th>管理员</th>
+  </tr>
+{% for category in categories %}
+<tr>
+	<td>{{ category._id.toString() }}</td>
+	<td>{{ category.name }}</td>
+	<td>{{ category.order }}</td>
+<td>
+		<a href="/category/edit/{{ category._id.toString() }}">编辑</a>
+		<a href="/category/delete/{{ category._id.toString() }}">删除</a>
+	</td>
+
+</tr>
+{% endfor %}
 </table>
+<!-- {% if pages>1 %}
+{% include './pagination.html' %}
+{% endif %} -->
 
 {% endblock %}
