--- a/9..blog/views/admin/layout.html
+++ b/9..blog/views/admin/layout.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>{% block title %}{% endblock %}</title>
+    <title>博客后台管理系统</title>
 
     <link href="/css/bootstrap.min.css" rel="stylesheet">
 
@@ -60,12 +60,13 @@
             <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
            <li ><a href="/admin/users">用户列表</a></li>
            <li ><a href="/category">分类管理</a></li>
+           <li ><a href="/article">文章管理</a></li>
 
           </ul>
          
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          <h1 class="page-header">博客后台管理系统</h1>
+          <h1 class="page-header">{% block title %}{% endblock %}</h1>
           
 
 {% block content %}
@@ -81,6 +82,8 @@
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/admin.js"></script>
 
+    {% block end %}
+    {% endblock %}
 
 
   </body>
