--- a/9..blog/views/admin/user_list.html
+++ b/9..blog/views/admin/user_list.html
@@ -1,7 +1,7 @@
 {% extends './layout.html' %}
 
 
-{% block title %}博客后台{% endblock %}
+{% block title %}用户管理{% endblock %}
 
 
 {% block content %}
