--- a/9..blog/views/admin/article.html
+++ b/9..blog/views/admin/article.html
@@ -7,14 +7,31 @@
 {% block content %}
 <a href="/article/add" class="btn btn-primary">新增文章</a>
 <table class="table table-striped">
-  <tr>
-    <th>id</th>
-    <th>名称</th>
+  <tr>   
+    <th>title</th>
+    <th>category</th>
+    <th>时间</th>
+    <!-- <th>intro</th> -->
+    <th>作者</th>
 
-    <th>序号</th>
-    <th>管理员</th>
+    <th>点击量</th>
+    <th>操作</th>
   </tr>
+	{% for article in articles %}
+	<tr>
+		<td>{{ article.title }}</td>
+		<td>{{ article.category.name }}</td>
+		<td>{{ article.createdAt|date('Y年M月D日 h:i:s',-8*60)  }}</td>
+		<td>{{ article.username }}</td>
+		<td>{{ article.click }}</td>
+		<td>
+			<a href="/article/look/{{ article._id.toString() }}">查看</a>
+			<a href="/article/edit/{{ article._id.toString() }}">编辑</a>
+			<a href="/article/delete/{{ article._id.toString() }}">删除</a>
+		</td>
 
+	</tr>
+	{% endfor %}
 </table>
 
 {% endblock %}
