--- a/9..blog/views/admin/article_edit.html
+++ b/9..blog/views/admin/article_edit.html
@@ -1,19 +1,25 @@
 {% extends './layout.html' %}
 
 
-{% block title %}新增文章{% endblock %}
+{% block title %}编辑文章{% endblock %}
 
 
 {% block content %}
 
-<form class="form-horizontal" id="article-add" action="/article/add" method="post">
+<form class="form-horizontal" id="article-add" action="/article/edit" method="post">
   <div class="form-group">
     <label for="name" class="col-sm-2 control-label">分类</label>
     <div class="col-sm-5">
       <select class="form-control" name="category">
         {% for category in categories %}
-        <option value="{{ category._id.toString() }}">{{ category.name }}</option>
+          {% if category._id.toString() == article.category.toString() %}
+        <option selected  value="{{ category._id.toString() }}">{{ category.name }}</option>
+        {% else %}
+        <option  value="{{ category._id.toString() }}">{{ category.name }}</option>
+        {% endif %}
         {% endfor %}
+
+
       </select>
     </div>
     <p class="err">11</p>
@@ -21,7 +27,7 @@
   <div class="form-group">
     <label for="inputPassword3" class="col-sm-2 control-label">title</label>
     <div class="col-sm-5">
-      <input type="text" name="title" class="form-control" id="inputPassword3" placeholder="请输入">
+      <input type="text" name="title" class="form-control" id="inputPassword3" placeholder="请输入"  value="{{ article.title }}">
     <p class="text-danger err"></p>
     </div>
     <p class="err">11</p>
@@ -29,7 +35,7 @@
   <div class="form-group">
     <label for="inputPassword3" class="col-sm-2 control-label">简介</label>
     <div class="col-sm-5">
-      <input type="text" name="intro" class="form-control" id="inputPassword3" placeholder="请输入">
+      <input type="text" name="intro" class="form-control" id="inputPassword3" value="{{ article.intro }}" placeholder="请输入">
     </div>
     <p class="err">11</p>
   </div>
@@ -37,7 +43,7 @@
     <label for="inputPassword3" class="col-sm-2 control-label">内容</label>
     <div class="col-sm-5">
     
- <textarea name="content" id="editor"></textarea>
+ <textarea name="content" id="editor">{{ article.content }}</textarea>
     </div>
 
   </div>
