--- a/9..blog/views/main/index.html
+++ b/9..blog/views/main/index.html
@@ -36,18 +36,20 @@
                 <span class="sr-only">Next</span>
               </a>
           </div>  
+          {% for article in articles %}
           <div class="panel panel-default">
                 <div class="panel-heading">
-                  <h3 class="panel-title"><a href="detail.html" class="link">移动设备优先</a></h3>
+                  <h3 class="panel-title"><a href="detail.html" class="link">{{ article.title }}</a></h3>
                 </div>
               <div class="panel-body">
-                在 Bootstrap 2 中，我们对框架中的某些关键部分增加了对移动设备友好的样式。而在 Bootstrap 3 中，我们重写了整个框架，使其一开始就是对移动设备友好的。这次不是简单的增加一些可选的针对移动设备的样式，而是直接融合进了框架的内核中。也就是说，Bootstrap 是移动设备优先的。针对移动设备的样式融合进了框架的每个角落，而不是增加一个额外的文件。
+                  {{ article.intro }}
               </div>
-              <div class="panel-footer"><span class="glyphicon glyphicon-user"></span>Tom <span class="glyphicon glyphicon-th-large"></span>
-                JavaScript
-                <span class="glyphicon glyphicon-time"></span>2018-07-01 <span class="glyphicon glyphicon-star" aria-hidden="true"></span>1000人已阅读</div>
+              <div class="panel-footer"><span class="glyphicon glyphicon-user"></span>{{ article.user.username }} <span class="glyphicon glyphicon-th-large"></span>
+                {{ article.category.name }}
+                <span class="glyphicon glyphicon-time"></span>{{ article.createdAt | date('Y年m月d日 h:i:s',-8*60) }} <span class="glyphicon glyphicon-star" aria-hidden="true"></span><em>{{ article.click }}</em>人已阅读</div>
           </div> 
-          <div class="panel panel-default">
+          {% endfor %}
+          <!-- <div class="panel panel-default">
                 <div class="panel-heading">
                   <h3 class="panel-title">移动设备优先</h3>
                 </div>
@@ -57,8 +59,11 @@
               <div class="panel-footer"><span class="glyphicon glyphicon-user"></span>Tom <span class="glyphicon glyphicon-th-large"></span>
                 JavaScript
                 <span class="glyphicon glyphicon-time"></span>2018-07-01 <span class="glyphicon glyphicon-star" aria-hidden="true"></span>1000人已阅读</div>
-          </div>     
-          <div class="panel panel-default">
+          </div>   -->
+
+
+
+          <!-- <div class="panel panel-default">
                 <div class="panel-heading">
                   <h3 class="panel-title">移动设备优先</h3>
                 </div>
@@ -68,7 +73,7 @@
               <div class="panel-footer"><span class="glyphicon glyphicon-user"></span>Tom <span class="glyphicon glyphicon-th-large"></span>
                 JavaScript
                 <span class="glyphicon glyphicon-time"></span>2018-07-01 <span class="glyphicon glyphicon-star" aria-hidden="true"></span>1000人已阅读</div>
-          </div>   
+          </div>    -->
           <div class="container ye">
             <nav aria-label="Page navigation">
               <ul class="pagination" id="page">
