--- a/9..blog/views/admin/article_edit.html
+++ b/9..blog/views/admin/article_edit.html
@@ -50,7 +50,7 @@
   
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-8">
-      <button type="submit" class="btn  btn-primary" id="btn-sub">发布文章</button>
+      <button type="submit" value="{{ article._id.toString() }}" name="id" class="btn  btn-primary" id="btn-sub">发布文章</button>
     </div>
   </div>
 </form>
