--- a/9..blog/views/main/detail.html
+++ b/9..blog/views/main/detail.html
@@ -1,3 +1,38 @@
+{% extends './layout.html' %}
+
+
+{% block title %}
+      {{ article.title }}
+{% endblock %}
+   {% block css %}
+        <link rel="stylesheet" href="/css/detail.css">  
+   {% endblock %}
+
+{% block content %}
+    <div class="panel panel-default custom">
+          <div class="panel-heading">
+            <h3 class="panel-title">{{ article.title }}</h3>
+            <p class="sub-title">
+              <span class="text-muted">{{ article.category.name }}</span>
+              <span class="text-muted">CSS</span>
+              <span class="text-muted">{{ article.createAt | date('Y年m月d日 H：i：s',-8*60) }}</span>
+            </p>
+          </div>
+        <div class="panel-body">
+          <div class="well">
+             <strong>简介：</strong>在 Bootstrap 2 中，我们
+          </div>
+          <p>
+            外的文件。
+          </p>
+        </div>
+       
+    </div> 
+
+
+{% endblock %}
+
+<!-- 
 <!DOCTYPE html>
 <html lang="zh-CN">
   <head>
@@ -6,7 +41,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>个人博客</title>
     <link href="./css/bootstrap.min.css" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="./css/blog.css"> -->
+    <link rel="stylesheet" href="./css/blog.css">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/detail.css">
   </head>
@@ -24,7 +59,7 @@
           <a class="navbar-brand" href="index.html" class="link">个人博客</a>
         </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
+        Collect the nav links, forms, and other content for toggling
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
       
@@ -37,8 +72,8 @@
           </ul>
          
           
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
+        </div>/.navbar-collapse
+      </div>/.container-fluid
     </nav>
     
 
@@ -144,4 +179,4 @@
     <script src="./js/blog.js"></script>
   </body>
 
-</html>
+</html> -->
