--- a/9..blog/views/main/layout.html
+++ b/9..blog/views/main/layout.html
@@ -7,9 +7,10 @@
     <title>
       {% block title %}{% endblock %}
     </title>
-    <link href="./css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./css/blog.css">
-    <link rel="stylesheet" href="./css/common.css">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/blog.css">
+    <link rel="stylesheet" href="/css/common.css">
+    {% block css %}  {% endblock %}
   </head>
   <body>
 
@@ -30,11 +31,13 @@
           <ul class="nav navbar-nav">
       
             <li class="active"><a href="#">主页</a></li>
-            <li><a href="list.html">HTML/CSS</a></li>
+            <!-- <li><a href="list.html">HTML/CSS</a></li>
             <li><a href="#">Javascript</a></li>
             <li><a href="#">经验总结</a></li>
-            <li><a href="#">个人感悟</a></li>
-           
+            <li><a href="#">个人感悟</a></li> -->
+            {% for category in categories %}
+                    <li><a href="/list/{{ category._id.toString() }}">{{ category.name }}</a></li>
+            {% endfor %}
           </ul>
          
           
@@ -126,11 +129,11 @@
 
 
           <div class="ad">
-            <img src="./img/3.jpg" alt="">
+            <img src="/img/3.jpg" alt="">
             
           </div>
           <div class="ad">
-            <img src="./img/4.jpg" alt="">
+            <img src="/img/4.jpg" alt="">
           </div>
 
           <div class="panel panel-default autor">
@@ -140,7 +143,7 @@
             <div class="panel-body">
               <div class="media-left">
                 <a href="#">
-                  <img src="./img/6.jpg" alt="6.jpg" class="img-circle">
+                  <img src="/img/6.jpg" alt="6.jpg" class="img-circle">
                 </a>
               </div>
               <div class="media-right">
@@ -172,7 +175,7 @@
               <h3 class="panel-title">推荐</h3>
             </div>
             <div class="panel-body">
-              <img src="./img/7.png" alt="7.png">
+              <img src="/img/7.png" alt="7.png">
             </div>
           </div>
         </div>
@@ -194,9 +197,9 @@
 
 
 
-    <script src="./js/jquery.min.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/blog.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/blog.js"></script>
   </body>
 
 </html>
