--- a/9..blog/views/main/layout.html
+++ b/9..blog/views/main/layout.html
@@ -160,12 +160,12 @@
             <div class="panel-body"id="hot-list">
   
               <ul class="list-group" >
-                <li class="list-group-item"><a href="#" class="link text-ellipsis">Cras justoras justoras justoras justoras justoras justo odio</a></li>
-                <li class="list-group-item"><a href="#" class="link text-ellipsis">Dapibusras justoras justoras justoras justo ac facilisis in</a>
-                </li>
-                <li class="list-group-item"><a href="#" class="link text-ellipsis">Morbi ras justoras justoras justoras justoleo risus</a></li>
-                <li class="list-group-item"><a href="#" class="link text-ellipsis">Portras justoras justoras justoa ac consectetur ac</a></li>
-                <li class="list-group-item"><a href="#" class="link text-ellipsis">Vestras justoras justoras justoibulum at eros</a></li>
+                {% for article in topArticles %}
+                 <li class="list-group-item">
+                  <a href="/view/{{ article._id.toString() }}" class="link text-ellipsis"> [{{ article.click }}]{{ article.title }} </a></li>
+                      
+                {% endfor %}
+                
               </ul>
             </div>
           </div>
@@ -196,10 +196,11 @@
    
 
 
-
+    <script src="/lib/moment.js"></script>
     <script src="/js/jquery.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/blog.js"></script>
+    
   </body>
 
 </html>
