--- a/9..blog/views/admin/category_edit.html
+++ b/9..blog/views/admin/category_edit.html
@@ -10,21 +10,21 @@
   <div class="form-group">
     <label for="name" class="col-sm-2 control-label">菜单名</label>
     <div class="col-sm-4">
-      <input type="text" value="{{ category.order }}" class="form-control" name="name" id="inputEmail3" placeholder="请输入">
+      <input type="text" value="{{ category.name }}" class="form-control" name="name" id="inputEmail3" placeholder="分类名称">
     </div>
     <p class="text-danger err"></p>
   </div>
   <div class="form-group">
     <label for="inputPassword3" class="col-sm-2 control-label">编号</label>
     <div class="col-sm-4">
-      <input type="number" name="order" class="form-control" value="{{ category.order }}" id="inputPassword3" placeholder="请输入">
+      <input type="number" name="order" class="form-control" value="{{ category.order }}" id="order" placeholder="请输入">
     </div>
   </div>
   
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-8">
        <input type="hidden" name="id" value="{{ category._id.toString() }}">
-      <button type="submit"  class="btn btn-primary">新增</button>
+      <button type="submit" id="btn-sub"  class="btn btn-primary">新增</button>
     </div>
   </div>
 </form>
