--- a/9..blog/views/main/detail.html
+++ b/9..blog/views/main/detail.html
@@ -34,6 +34,31 @@
     </div> 
 
 
+
+    <div class="row">
+        <div class="col-lg-12">
+          <div class="input-group">
+            <textarea id="comment-content" cols="30" rows="3" class="form-control"></textarea>
+              <span class="input-group-btn">
+              <input type="hidden" value="{{ article._id.toString() }}" id="article-id">
+              <a href="javascript:;" class="btn btn-primary" type="button" id='comment-btn'>提交
+            </a>
+          </div>
+          <p class="text-danger err"></p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          {% for commit in commits %}
+          {% endfor %}
+          <div class="panel-heading">{{ commit.user.username }}发表于{{  }}</div>
+
+            <div class="panel-body">
+  fhhhhhhhhhhhhhhhhhhhhhhhh{{ commit.content }}
+            </div>
+        </div>
+      </div>
+
 {% endblock %}
 
 <!-- 
