--- a/9..blog/views/admin/layout.html
+++ b/9..blog/views/admin/layout.html
@@ -61,7 +61,7 @@
            <li ><a href="/admin/users">用户列表</a></li>
            <li ><a href="/category">分类管理</a></li>
            <li ><a href="/article">文章管理</a></li>
-           <li ><a href="/article">评论管理</a></li>
+           <li ><a href="/admin/comments">评论管理</a></li>
            <li ><a href="/resource">资源管理</a></li>
 
           </ul>
