--- a/9..blog/views/main/detail.html
+++ b/9..blog/views/main/detail.html
@@ -35,29 +35,43 @@
 
 
 
+   <div class="row">
+    <div class="col-lg-12">
+      {% if userInfo._id %}
+      <div class="input-group">
+        <textarea id="comment-content" cols="30" rows="3" class="form-control"></textarea>
+          <span class="input-group-btn">
+          <input type="hidden" value="{{ article._id.toString() }}" id="article-id">
+          <a href="javascript:;" class="btn btn-primary" type="button" id='comment-btn'>提交</button>
+        </a>
+      </div>
+      <p class="text-danger err"></p>
+      {% else %}
+      <div class="alert alert-info" role="alert">
+      请登录后添加评论
+    </div>
+      {% endif %}
+    </div>
+  </div>
     <div class="row">
-        <div class="col-lg-12">
-          <div class="input-group">
-            <textarea id="comment-content" cols="30" rows="3" class="form-control"></textarea>
-              <span class="input-group-btn">
-              <input type="hidden" value="{{ article._id.toString() }}" id="article-id">
-              <a href="javascript:;" class="btn btn-primary" type="button" id='comment-btn'>提交
-            </a>
-          </div>
-          <p class="text-danger err"></p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-12">
-          {% for commit in commits %}
-          {% endfor %}
-          <div class="panel-heading">{{ commit.user.username }}发表于{{  }}</div>
-
-            <div class="panel-body">
-  fhhhhhhhhhhhhhhhhhhhhhhhh{{ commit.content }}
+      <div class="col-lg-12">
+          <div id="comment-list">
+            {% for comment in comments %}
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                {{ comment.user.username }} 发表于 {{ comment.createdAt | date('Y年m月d日 H:i:s',-8*60) }}
+              </div>
+              <div class="panel-body">
+                {{ comment.content }}
+              </div>
             </div>
-        </div>
+            {% endfor %}
+          </div>
+          <nav aria-label="Page navigation" id="comment-page" data-url="/comment/list" data-id="{{ article._id.toString() }}">
+            {% include './pagination.html' %}
+          </nav>    
       </div>
+    </div>
 
 {% endblock %}
 
