--- a/9..blog/views/admin/category_list.html
+++ b/9..blog/views/admin/category_list.html
@@ -27,8 +27,8 @@
 </tr>
 {% endfor %}
 </table>
-<!-- {% if pages>1 %}
+{% if pages>1 %}
 {% include './pagination.html' %}
-{% endif %} -->
+{% endif %}
 
 {% endblock %}
