--- a/9..blog/views/admin/layout.html
+++ b/9..blog/views/admin/layout.html
@@ -63,6 +63,8 @@
            <li ><a href="/article">文章管理</a></li>
            <li ><a href="/admin/comments">评论管理</a></li>
            <li ><a href="/resource">资源管理</a></li>
+           <li ><a href="/admin/site">站点管理</a></li>
+           <li ><a href="/admin/password">修改密码</a></li>
 
           </ul>
          
