--- a/9..blog/views/admin/article.html
+++ b/9..blog/views/admin/article.html
@@ -22,7 +22,7 @@
 		<td>{{ article.title }}</td>
 		<td>{{ article.category.name }}</td>
 		<td>{{ article.createdAt|date('Y年m月d日 h:i:s',-8*60)  }}</td>
-		<td>{{ article.username }}</td>
+		<td>{{ article.user.username }}</td>
 		<td>{{ article.click }}</td>
 		<td>
 			<a href="/article/look/{{ article._id.toString() }}">查看</a>
@@ -33,6 +33,10 @@
 	</tr>
 	{% endfor %}
 </table>
+
+{% if pages>1 %}
+{% include './pagination.html' %}
+{% endif %}
 
 {% endblock %}
 
