--- a/9..blog/views/admin/resource.html
+++ b/9..blog/views/admin/resource.html
@@ -15,18 +15,28 @@
   </tr>
 	{% for resource in resources %}
 	<tr>
-		<td>{{ resource.title }}</td>
-		<td>{{ article.category.name }}</td>
-		<td>{{ article.createdAt|date('Y年m月d日 h:i:s',-8*60)  }}</td>
-		<td>{{ article.username }}</td>
-		<td>{{ article.click }}</td>
+		<td>{{ resource.name }}</td>
 		<td>
-			<a href="/article/delete/{{ article._id.toString() }}">删除</a>
+			<a href="javascript:;" class="thumbnail">
+				<img src="{{ resource.path }}" alt="">
+			</a>
+			
+		</td>
+		<td>
+			{{ resource.path }}
+		</td>
+	
+		<td>
+			<a href="/resource/delete/{{ resource._id.toString() }}">删除</a>
 		</td>
 
 	</tr>
 	{% endfor %}
 </table>
+
+{% if pages > 1 %}
+{% include './pagination.html' %}
+{% endif %}
 
 {% endblock %}
 
