--- a/9..blog/views/main/index.html
+++ b/9..blog/views/main/index.html
@@ -5,37 +5,48 @@
 
 
 {% block content %}
-          <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-          <!-- Indicators -->
-            <ol class="carousel-indicators">
-              <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-              <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-              <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-            </ol>
+     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+      <ol class="carousel-indicators">
+        {% for carousel in site.carouseles  %}
+        {% if loop.index0 ==0 %}
+        <li data-target="#carousel-example-generic" data-slide-to="{{ loop.index0 }}" class="active"></li>
+        {% else %}
+        <li data-target="#carousel-example-generic" data-slide-to="{{ loop.index0 }}"></li>
+        {% endif %}
+        {% endfor %}
+      </ol>
 
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox">
-                  <div class="item active">
-                    <img src="./img/1.jpg" alt="1.jpg">
-           
-                  </div>
-                  <div class="item">
-                    <img src="./img/2.jpg" alt="2.jpg">
-                 
-                  </div>
-           
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner" role="listbox">
+          {% for carousel in site.carouseles  %}
+         {% if loop.index0 ==0 %}
+            <div class="item active">
+              <a href="{{ carousel.url }}" target="_blank">
+              <img src="{{ carousel.path }}" alt="{{ carousel.path }}">
+              </a>
             </div>
+         {% else %}   
+            <div class="item">
+              <a href="{{ carousel.url }}" target="_blank"> 
+                <!-- 新打开一个页面 -->
+              <img src="{{ carousel.path }}" alt="2.jpg">
+              </a>
+            </div>
+        {% endif %}
+        {% endfor %}
+      </div>
 
-              <!-- Controls -->
-              <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
-          </div>  
+        <!-- Controls -->
+        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+    </div>  
 
 
          <!--  {% for article in articles %} 
