--- a/11.shop/home/src/view/user-register.html
+++ b/11.shop/home/src/view/user-register.html
@@ -18,19 +18,43 @@
 				<label for="" class="form-label">
 					<i class="fa fa-user"></i>
 				</label>
-				<input type="text" class="form-content">
+				<input type="text" class="form-content" placeholder="请输入用户名" name="username">
 			</div>
 			<div class="form-item">
 				<label for="" class="form-label">
 					<i class="fa fa-lock"></i>
 				</label>
-				<input type="password" class="form-content">
+				<input type="password" class="form-content" name="password" class="请输入密码">
+			</div>
+			<div class="form-item">
+				<label for="" class="form-label">
+					<i class="fa fa-lock"></i>
+				</label>
+				<input type="password" class="form-content" name="repassword" class="请再次输入密码">
+			</div>
+			<div class="form-item">
+				<label for="" class="form-label">
+					<i class="fa fa-phone"></i>
+				</label>
+				<input type="text" class="form-content" name="phone" class="请输入手机号">
+			</div>
+			<div class="form-item">
+				<label for="" class="form-label">
+					<i class="fa fa-phone"></i>
+				</label>
+				<input type="text" class="form-content" name="phone" class="请输入手机号">
+			</div>
+			<div class="form-item">
+				<label for="" class="form-label">
+					<i class="fa fa-envelope"></i>
+				</label>
+				<input type="password" class="form-content" name="email" class="请输入邮箱">
 			</div>
 			<div class="btn-item">
 				<a href="javascript:;" class="btn btn-submit">提交</a>
 			</div>
 			<div class="link-item">
-				<a href="./user-login.html" class="link "> 前去登陆</a>
+				<a href="./user-login.html" class="link ">已有账号 前去登陆</a>
 			</div>
 
 		</div>
