--- a/11.shop/home/src/view/user-login.html
+++ b/11.shop/home/src/view/user-login.html
@@ -18,13 +18,13 @@
 				<label for="" class="form-label">
 					<i class="fa fa-user"></i>
 				</label>
-				<input type="text" class="form-content" name="username">
+				<input type="text" class="form-content" name="username" placeholder="请输入用户名">
 			</div>
 			<div class="form-item">
 				<label for="" class="form-label">
 					<i class="fa fa-lock"></i>
 				</label>
-				<input type="password" class="form-content" name="password">
+				<input type="password" class="form-content" name="password" placeholder="请输入密码">
 			</div>
 			<div class="btn-item">
 				<a href="javascript:;" class="btn btn-submit" id="btn-submit">提交</a>
