--- a/11.shop/home/src/view/user-center.html
+++ b/11.shop/home/src/view/user-center.html
@@ -12,7 +12,41 @@
  <%= require('html-loader!./common/nav.html')  %>
  <%= require('html-loader!./common/search.html')  %>
 
+<div class="user-page-wrap clearfix">
+	<div class="container ">
+		
+		 <%= require('html-loader!./common/side.html')  %>
+		<div class="content">
+			<div class="user-form">
+			<div class="form-item">
+				<div class="label-item">
+					用户名:
+				</div>
+				<div class="content-item">
+					xxx{{username}}
+				</div>
+			</div>
+			<div class="form-item">
+				<div class="label-item">
+					手机号:
+				</div>
+				<div class="content-item">
+					xxx
+				</div>
+			</div>
+			<div class="form-item">
+				<div class="label-item">
+					邮箱:
+				</div>
+				<div class="content-item">
+					xxx
+				</div>
+			</div>
+			</div>
+		</div>
 
+	</div>	
+</div>
 
 
 
