--- a/11.shop/home/src/view/user-register.html
+++ b/11.shop/home/src/view/user-register.html
@@ -38,20 +38,15 @@
 				</label>
 				<input type="text" class="form-content" name="phone" class="请输入手机号">
 			</div>
-			<div class="form-item">
-				<label for="" class="form-label">
-					<i class="fa fa-phone"></i>
-				</label>
-				<input type="text" class="form-content" name="phone" class="请输入手机号">
-			</div>
+			
 			<div class="form-item">
 				<label for="" class="form-label">
 					<i class="fa fa-envelope"></i>
 				</label>
-				<input type="password" class="form-content" name="email" class="请输入邮箱">
+				<input type="email" class="form-content" name="email" class="请输入邮箱">
 			</div>
 			<div class="btn-item">
-				<a href="javascript:;" class="btn btn-submit">提交</a>
+				<a href="javascript:;" class="btn btn-submit" id="btn-submit">提交</a>
 			</div>
 			<div class="link-item">
 				<a href="./user-login.html" class="link ">已有账号 前去登陆</a>
