--- a/11.shop/home/src/pages/common/index.css
+++ b/11.shop/home/src/pages/common/index.css
@@ -5,6 +5,15 @@ body{
 	background-color:#ccc;
 
 }
+
+.clearfix:after{
+    content:"";
+    clear:both;
+    display:block;
+    height:0px;
+   visibility: hidden;
+}
+
  a.link{
  	text-decoration: none;
 	color: #888;
