--- a/11.shop/home/src/view/user-center.html
+++ b/11.shop/home/src/view/user-center.html
@@ -16,33 +16,33 @@
 	<div class="container ">
 		
 		 <%= require('html-loader!./common/side.html')  %>
-		<div class="content">
-			<div class="user-form">
-			<div class="form-item">
-				<div class="label-item">
-					用户名:
+		<div class="side-content">
+			<!-- <div class="user-form">
+				<div class="form-item">
+					<div class="label-item">
+						用户名:
+					</div>
+					<div class="content-item">
+						xxx{{username}}
+					</div>
 				</div>
-				<div class="content-item">
-					xxx{{username}}
+				<div class="form-item">
+					<div class="label-item">
+						手机号:
+					</div>
+					<div class="content-item">
+						xxx{{phone}}
+					</div>
 				</div>
-			</div>
-			<div class="form-item">
-				<div class="label-item">
-					手机号:
+				<div class="form-item">
+					<div class="label-item">
+						邮箱:
+					</div>
+					<div class="content-item">
+						xxx{{email}}
+					</div>
 				</div>
-				<div class="content-item">
-					xxx
-				</div>
-			</div>
-			<div class="form-item">
-				<div class="label-item">
-					邮箱:
-				</div>
-				<div class="content-item">
-					xxx
-				</div>
-			</div>
-			</div>
+			</div> -->
 		</div>
 
 	</div>	
