--- a/11.shop/home/src/view/user-update-password.html
+++ b/11.shop/home/src/view/user-update-password.html
@@ -1,61 +1,43 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>kmall</title>
-	<meta name="description" content="跨足网 提供各类服饰、美容、家居、数码、话费/点卡充值… 数亿优质商品，款)等安全交易保障服务，让你安心享受网上购物乐趣！" />
-	<meta name="keyword" content="C2C,在线交易,网上交易,网上卖,购物网站,团购,网上贸易,安全购物,电子商务" />
-	
+	<%= require('html-loader!./common/header.html') %>
+	<title>
+		<%= htmlWebpackPlugin.options.title %> - KMALL电商平台
+	</title>
 </head>
 <body>
-<!-- <i class="fa fa-user">	</i> -->
-
- <%= require('html-loader!./common/nav.html')  %>
- <%= require('html-loader!./common/search.html')  %>
-
-<div class="user-page-wrap clearfix">
-	<div class="container ">
-		
-		 <%= require('html-loader!./common/side.html')  %>
-		<div class="content">
-
-			<div class="form-box">
-			<h2 class="title">修改密码</h2>
-			<div class="error-item">
-					<i class="fa fa-minus-circle error-icon"></i>
-					<p class="error-msg">error</p>
-			</div>
-		
-			<div class="form-item">
-				<label for="" class="form-label">
-					<i class="fa fa-lock"></i>
-				</label>
-				<input type="password" class="form-content" name="password" placeholder ="请输入密码">
-			</div>
-			<div class="form-item">
-				<label for="" class="form-label">
-					<i class="fa fa-lock"></i>
-				</label>
-				<input type="password" class="form-content" name="repassword" placeholder="请再次输入密码">
-			</div>
-			
-			<div class="btn-item">
-				<a href="javascript:;" class="btn btn-submit" id="btn-submit">提交</a>
-			</div>
+	<%= require('html-loader!./common/nav.html') %>
+	<%= require('html-loader!./common/search.html') %>
+	<div class="user-page-wrap clearfix">
+		<div class="container clearfix">
+			<%= require('html-loader!./common/side.html') %>
+			<div class="side-content">
+				<div class="form-box">
+					<div class="error-item">
+						<i class="fa fa-minus-circle error-icon"></i>
+						<p class="error-msg">error</p>
+					</div>
+					<div class="form-item">
+						<label for="" class="form-lable">
+							<i class="fa fa-lock"></i>
+						</label>
+						<input type="password" class="form-content" name="password" placeholder="请输入密码">
+					</div>
+					<div class="form-item">
+						<label for="" class="form-lable">
+							<i class="fa fa-lock"></i>
+						</label>
+						<input type="password" class="form-content" name="repassword" placeholder="请再次输入密码">
+					</div>									
+					<div class="btn-item">
+						<a href="javascript:;" class="btn btn-submit" id="btn-submit">提交</a>
+					</div>			
+				</div>				
 			</div>
 		</div>
+	</div>
 
-	</div>	
-</div>
-
-
-
-
-
-
-
-
- <!--安装包 
- 	npm install html-loader --save-dev; -->
- <%= require('html-loader!./common/footer.html')  %>
+	<%= require('html-loader!./common/footer.html') %>
 </body>
 </html>
