--- a/11.shop/home/src/pages/common/side/index.css
+++ b/11.shop/home/src/pages/common/side/index.css
@@ -1,60 +1,38 @@
-
-
-.content {
-
+.user-page-wrap{
+	margin-bottom: 20px;
 }
-
-.label-item{
-	display: inline-block;
-}
-.content-item{
-	display: inline-block;
-}
-
-
-
 .side{
 	width: 150px;
-	height: 500px;
+	min-height: 600px;
 	float: left;
+	background-color: #fff;
 	margin-right: 20px;
+	padding-top: 20px;
 	box-sizing: border-box;
-	background: #fff;
-	margin-top: 30px;
 }
-.side .side-item a{
-	display: block;
-	width: 100%;
-	color: #000;
-	text-decoration: none;
-
-}
-
-.side .side-item a.active{
-border-right: 2px solid #f21;
-color: #f21;
-
-}
-.side .side-item a:hover {
-border-right: 2px solid #f21;
-color: #f21;
-
-}
-.side .side-item{
+.side-item{
 	height: 30px;
-	/*color: #ff6700;*/
-	font-size: 15px;
-	text-align: center;
 	line-height: 30px;
-	
+	box-sizing: border-box;
+	padding-left: 20px;
 }
-.user-page-wrap .content{
-	width: 1000px;
-	height: 500px;
-	float: left;
-	margin-top: 30px;
-	margin-right: 20px;
-	background: #fff;
+.side-item.active .link{
+	color: #f21;
+}
+.side-item.active{
+	border-right: 2px solid #f21;
+}
 
+.side-content{
+	float: left;
+	width: 910px;
+	min-height: 600px;
+	background-color: #fff;
+	box-sizing: border-box;
+	padding: 20px;
 }
+
+
+
+
 
