--- a/11.shop/home/src/pages/user-update-password/index.css
+++ b/11.shop/home/src/pages/user-update-password/index.css
@@ -1,120 +1,76 @@
-
+.side-content .form-box{
+	margin: 10px;
+	padding: 10px;
+}
 
 .user-page-wrap{
-	border-top: 2px solid #f21;
+margin: 30px;
 }
 
-.side{
-	width: 150px;
-	height: 500px;
-	float: left;
-	margin-right: 20px;
-	box-sizing: border-box;
-	background: #fff;
-	margin-top: 30px;
-	/*border: 2px solid #000;*/
-}
-.side .side-item.active{
-border-right: 2px solid #f21;
-color: #f21;
-
-}
-.side .side-item:hover{
-border-right: 2px solid #f21;
-color: #f21;
-
-}
-.side .side-item{
-	height: 30px;
-	/*color: #ff6700;*/
-	font-size: 15px;
-	text-align: center;
-	line-height: 30px;
-	
-}
-.user-page-wrap .content{
-	width: 1000px;
-	height: 500px;
-	float: left;
-	margin-top: 30px;
-	margin-right: 20px;
-	background: #fff;
-
-}
-
-
+/*
+共通表单样式
+*/
 .form{
-	width: 100%;
-	height: 420px;
-	background: #ccc;
-	padding: 50px;
+	background-color: #bdbdbd;
+	overflow: hidden;
 }
-
 .form-box{
 	width: 350px;
-	height: 300px;
-	/*background: #ccc;*/
-	margin-top: 20px;
-	margin:20px 40px;	
-	padding: 20px;
+	margin: 50px 22px;
+	background-color: #fff;
+	padding: 30px;
+
 }
+
 .form-box .title{
 	font-size: 20px;
 	text-align: center;
 	margin-bottom: 10px;
 }
 .form-box .error-item{
-	/*display: inline-block;*/
+	display: none;
 	border: 1px solid red;
 	color: red;
+	height: 30px;
+	line-height: 30px;
+	margin-bottom: 10px;
+	font-size: 14px;
+	padding-left: 10px;
+}
+
+.form-box .error-msg{
+	display: inline-block;
+	margin-left: 10px;
+}
+.form-box .form-item{
+	border: 1px solid #bdbdbd;
 	margin-bottom: 10px;
 	height: 30px;
 	line-height: 30px;
-
 }
-.form-box .error-item .error-msg{
+.form-box .form-lable{
 	display: inline-block;
-
-}
-.form-box  .form-item{
-	
-	border: 1px solid #ccc;
-	margin-bottom: 10px;
-}
-
-.form-box label{
-	display: inline-block;
+	background-color: #f3f3f3;
 	width: 30px;
-	height: 30px;
 	text-align: center;
-	line-height: 30px;
+	border-right: 1px solid #bdbdbd;
 }
 .form-box .form-content{
 	width: 300px;
-	height: 30px;
+	line-height: 30px;
 	outline: none;
 	border: none;
-
+	padding-left: 10px;
 }
-/*.form-box  .btn-item{
-	background: blue;
-	height: 30px;
-	line-height: 30px;
-	text-align: center;
-	border: 1px solid #777;
+.form-box .btn-item{
 	margin-bottom: 10px;
-}*/
-.form-box  .btn-item .btn-submit{
+}
+
+.form-box .btn-submit{
 	width: 100%;
+	height: 40px;
+	line-height: 40px;
 }
 .form-box .link-item{
 	text-align: right;
 }
-
-
-
-
-
-
-
-
