--- a/11.shop/home/src/view/common/side.html
+++ b/11.shop/home/src/view/common/side.html
@@ -2,13 +2,13 @@
 	<!-- hogan.js模板插件 -->
 
 	<ul class="side">
-		<li class="side-item active">
+		<!-- <li class="side-item active">
 			<a href="./user-center.html" class="link">个人中心</a>
 		</li>
 		<li class="side-item">
 			<a href="/" class="link">个人订单</a></li>
 		<li class="side-item">
 			<a href="./user-update-password.html" class="link">更新密码</a>
-		</li>
+		</li> -->
 		
 	</ul>
