--- a/11.shop/home/src/view/index.html
+++ b/11.shop/home/src/view/index.html
@@ -12,9 +12,82 @@
  <%= require('html-loader!./common/nav.html')  %>
  <%= require('html-loader!./common/search.html')  %>
 
+<div class="focus clearfix">
+	<div class="container">
+		<ul class="keywords" id="keywords">
+		
+		</ul>
+		<div class="carousel">
+			    <ul>
+			        <li>
+						<a href="./list.html?categoryId=111">
+							<img src="<%= require('../images/carousel/1.jpg') %>" alt="">
+						</a>
+			        </li>
+			  		<li>
+						<a href="./list.html?categoryId=111">
+							<img src="<%= require('../images/carousel/1.jpg') %>" alt="">
+						</a>
+			        </li>
+			  		<li>
+						<a href="./list.html?categoryId=111">
+							<img src="<%= require('../images/carousel/1.jpg') %>" alt="">
+						</a>
+			        </li>
+			  
+			    </ul>
+				<span class="arrow prev">
+					<i class="fa fa-angle-left"></i>
+				</span>
+				<span class="arrow next">
+					<i class="fa fa-angle-right"></i>
+				</span>
+		
+		</div>
+	</div>
+</div>
 
-
-
+<div class="floor">
+	<div class="container">
+		<div class="floor-wrap ">
+			<div class="floor-box ">
+				<h2>f1数码	</h2>
+				<ul class="floor-list ">
+					<li class="floor-item">
+						<a href="./list.html?categoryId=111" class="link">
+							<p class="floor-text">手机</p>
+							<img src="<%= require('images/floor/floor1-1.jpg') %>" alt="">
+						</a>
+					</li>
+					<li class="floor-item">
+						<a href="./list.html?categoryId=111" class="link">
+							<p class="floor-text">手机</p>
+							<img src="<%= require('images/floor/floor1-1.jpg') %>" alt="">
+						</a>
+					</li>
+					<li class="floor-item">
+						<a href="./list.html?categoryId=111" class="link">
+							<p class="floor-text">手机</p>
+							<img src="<%= require('images/floor/floor1-1.jpg') %>" alt="">
+						</a>
+					</li>
+					<li class="floor-item">
+						<a href="./list.html?categoryId=111" class="link">
+							<p class="floor-text">手机</p>
+							<img src="<%= require('images/floor/floor1-1.jpg') %>" alt="">
+						</a>
+					</li>
+					<li class="floor-item">
+						<a href="./list.html?categoryId=111" class="link">
+							<p class="floor-text">手机</p>
+							<img src="<%= require('images/floor/floor1-1.jpg') %>" alt="">
+						</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</div>
 
 
 
