--- a/11.shop/home/src/view/list.html
+++ b/11.shop/home/src/view/list.html
@@ -15,10 +15,11 @@
 	<div class="list">
 		<div class="container clearfix">
 			<ul class="sort">
-				<li class="sort-item default">默认排序</li>
-				<li class="sort-item price">
+				<li class="sort-item default active">默认排序</li>
+				<li class="sort-item price asc">
 					价格排序
-					<i class="fa fs"></i>
+					<i class="fa fa-sort-asc"></i>
+					<i class="fa fa-sort-desc"></i>
 				</li>
 			</ul>
 		</div>
