--- a/11.shop/home/src/pages/common/index.css
+++ b/11.shop/home/src/pages/common/index.css
@@ -6,14 +6,14 @@ body{
 
 }
 
-.clearfix:after{
-    content:"";
-    clear:both;
-    display:block;
-    height:0px;
-   visibility: hidden;
-}
 
+.clearfix:after{
+	clear:both;
+	display: block;
+	content: '';
+	visibility: hidden;
+	height: 0;
+}
  a.link{
  	text-decoration: none;
 	color: #888;
