--- a/11.shop/home/src/pages/index/index.css
+++ b/11.shop/home/src/pages/index/index.css
@@ -41,6 +41,14 @@ body {
 	/*background: yellow;*/
 	position: relative;
 }
+.carousel li{
+	width: 830px;
+	height: 430px;
+}
+.carousel li img{
+	width: 100%;
+	height: 100%;
+}
 
 .carousel .arrow{
 	width: 30px;
@@ -63,12 +71,21 @@ body {
 	right: 0;
 }
 
+.floor{
+	margin-bottom: 20px;
+}
+.floor .container{
+	height: 585px;
+}
+
 .floor-wrap{
+	width: 100%;
 
 }
 .floor-wrap .floor-box{
+/*border: 1px solid #000;	*/
 	width: 100%;
-	height: 80px;
+	height: 290px;
 	/*background: red;*/
 }
 
@@ -85,12 +102,16 @@ body {
 	width: 100%;
 	height: 240px;
 
+
 }
 .floor-item {
 	width: 230px;
 	height: 240px;
 	float: left;
 	margin-left: 10px;
+	background:#fff;
+	box-sizing: border-box;
+	padding-top: 10px;
 	
 }
 .floor-item{
