--- a/11.shop/home/src/view/list.html
+++ b/11.shop/home/src/view/list.html
@@ -22,6 +22,9 @@
 					<i class="fa fa-sort-desc"></i>
 				</li>
 			</ul>
+			<div class="product-list-box">
+				
+			</div>
 		</div>
 	</div>
 
