--- a/11.shop/home/src/util/pagination/index.css
+++ b/11.shop/home/src/util/pagination/index.css
@@ -20,6 +20,12 @@
 }
 .active{
 	border-color: #f21;
+	cursor: auto;
+}
+.page-summ{
+	display: inline-block;
+	font-size: 15px;
+	margin-left: 10px;
 }
 
 
