--- a/11.shop/home/src/view/detail.html
+++ b/11.shop/home/src/view/detail.html
@@ -14,55 +14,10 @@
 	
 	<div class="detail">
 		<div class="container clearfix">
+		<div class="detail-box">
 			
-			<div class="product-intro clearfix">
-				<div class="product-img">
-					<div class="product-main-img">
-						<img src="" alt="" />
-					</div>
-					<ul class="product-small-img-item">
-						<li class="product-img-item">
-							<img src="" alt="" />
-						</li>
-						<li class="product-img-item">
-							<img src="" alt="" />
-						</li>
-					</ul>
-				</div>
-				<div class="product-info">
-					<h2 class="product-name">手机</h2>
-					<p class="product-description">xxxx</p>
-					<div class="product-info-item product-price">
-						<span class="label">价格</span>
-						<span class="info">￥111</span>
-					</div>
-					<div class="product-info-item">
-						<span class="label">库存</span>
-						<span class="info">￥111</span>
-					</div>
-					<div class="product-info-item">
-						<span class="label">数量</span>
-						<input type="text" class="count-input" />
-						<span class="count-btn plus">+</span>
-						<span class="count-btn minus">-</span>
-					</div>
-					<div class="add-cart">
-						<a href="javascript:;" class="btn"></a>
-					</div>
-				</div>
-				
-			</div>
-			<div class="product-detail">
-				<div class="tab">
-					<ul class="tab-list clearfix">
-						<li class="tab-item">商品详情</li>
-						<li class="tab-item">用户评论</li>
-					</ul>
-					<div class="tab-content">
-						detail.....
-					</div>
-				</div>
-			</div>
+		</div>	
+			
 		</div>
 	</div>
 
