--- a/11.shop/home/src/pages/detail/index.css
+++ b/11.shop/home/src/pages/detail/index.css
@@ -1,4 +1,7 @@
 
+.product-intro{
+	margin-top: 20px;
+}
 
 .product-img{
 	float: left;
@@ -16,26 +19,28 @@
 	width: 100%;
 	height: 100%;
 }
-.product-small-img-item{
+/*.product-small-img-item{*/
+.product-img-item{
 	float: left;
-	width: 80px;
-	height: 80px;
+	width: 95px;
+	height: 95px;
 	margin-left: 10px;
 	border:1px solid #999;
 	box-sizing: border-box;
 
 }
-.product-small-img-item img{
+.product-img-item img{
 	width: 100%;
 	height: 100%;
 }
 .product-small-item:last-child{
-	margin-right: 0px;
+	margin-left: 0px;
 }
 .product-info{
 	float: left;
 	width: 620px;
-	padding-left: 10px;
+	padding-left: 20px;
+
 	box-sizing: border-box;
 }
 .product-info .product-name{
@@ -98,12 +103,14 @@
 }
 
 .product-detail .tab{
-	
+	margin-top: 20px;
 }
 .product-detail .tab-list{
 	height: 40px;
 	line-height: 40px;
+	color: #f21;
 	background-color: #ddd;
+	border-bottom: 2px solid #f21;
 }
 .product-detail .tab-item{
 	width: 80px;
