--- a/11.shop/home/src/view/list.html
+++ b/11.shop/home/src/view/list.html
@@ -22,7 +22,7 @@
 					<i class="fa fa-sort-desc"></i>
 				</li>
 			</ul>
-			<div class="product-list-box">
+			<div class="product-list-box clearfix">
 				
 			</div>
 			<div class="pagination-box">
