--- a/11.shop/home/src/pages/common/index.css
+++ b/11.shop/home/src/pages/common/index.css
@@ -51,7 +51,7 @@ body{
 	cursor: pointer;
 }
 
-
+/*空白页*/
 .empty-message{
 	text-align: center;
 	padding-top: 100px;
@@ -59,3 +59,102 @@ body{
 	font-size: 30px;
 	color: #f21;
 }
+/* 
+	panel
+ */
+
+.panel{
+	padding: 10px;
+	background-color: #fff;
+
+}
+.panel-header{
+	height: 30px;
+	line-height: 30px;
+	font-size: 16px;
+	color: #333;
+	border-bottom: 1px solid #fafafa;
+
+}
+.panel-body{
+	padding: 10px;
+	overflow: hidden;
+	/*清除浮动*/
+}
+
+/*购物车列表样式*/
+
+.product-title li,
+.product-item li,
+.product-footer li{
+	float: left;
+}
+.product-title,
+.product-item,
+.product-footer{
+	padding-left: 10px;
+	box-sizing: border-box;
+}
+
+
+.product-title {
+	height: 40px;
+	line-height: 40px;
+	background-color: #ddd;
+	color: #666;
+	margin-bottom: 15px;
+}
+
+.product-item {
+	height: 80px;
+	line-height: 80px;
+	margin-bottom: 15px;
+	border: 1px solid #ddd;
+}
+
+.product-item .product-info img{
+	width: 60px;
+	height: 60px;
+	vertical-align: middle;
+}
+
+
+.product-item  .product-totalPrice{
+	font-size: 14px;
+	font-weight: bold;
+}
+
+
+.product-footer{
+	height: 60px;
+	line-height: 60px;
+	background-color: #ddd;
+	color: #666;	
+}
+
+.product-footer .product-submit{
+	float: right;
+}
+.product-footer .product-submit .btn-submit{
+	height: 60px;
+	line-height: 60px;
+	width: 100px;	
+}
+.product-footer .product-submit  .total-price{
+	display: inline-block;
+	line-height: 60px;
+	font-size: 20px;
+	font-weight: bold;
+	color: #f21;
+}
+.product-footer .product-submit .total-price-text{
+	position: relative;
+	top:-2px;
+}
+
+
+
+
+
+
+
